--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,9 +23,8 @@ body {
   background: var(--background); */
   font-family: "Outfit", sans-serif;
   font-weight: 400;
-  font-size: 20px;
+  font-size: 16px;
   color: #000000;
-  line-height: 22px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -39,6 +38,14 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.navbar,
+.navbar-brand,
+.navbar-nav,
+.nav-link,
+.btn {
+  font-family: 'Outfit', sans-serif !important;
 }
 
 /* @media (prefers-color-scheme: dark) {
