--- a/src/app/landing/landing.css
+++ b/src/app/landing/landing.css
@@ -83,7 +83,6 @@ a {
   }
 }
 
-
 .accordion-gallery {
   display: flex;
   justify-content: center;
@@ -93,39 +92,30 @@ a {
 }
 
 .accordion-image {
-  flex: 1;
   position: relative;
-  transition: flex 0.4s ease, border-radius 0.3s ease;
-  cursor: pointer;
+  height: 100%;
+  width: 120px;
   border-radius: 150px;
+  cursor: pointer;
+  transition: all 0.5s ease;
   overflow: hidden;
 }
 
 .accordion-image.active {
-  flex: 10;
+  width: 1100px;
   border-radius: 16px;
 }
-
 
 .accordion-overlay {
   position: absolute;
   bottom: 0;
-  left: 0;
-  right: 0;
-  padding: 20px;
-  color: white;
+  width: 100%;
   background: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(4px);
+  color: white;
+  padding: 20px;
   text-align: center;
-  opacity: 0;
-  transform: translateY(20px);
-  transition: all 0.3s ease;
-  z-index: 2;
-}
-
-.accordion-image.active .accordion-overlay {
+  backdrop-filter: blur(1.5px);
   opacity: 1;
-  transform: translateY(0);
 }
 
 .accordion-overlay h3 {
@@ -177,6 +167,10 @@ a {
   break-inside: avoid;
 }
 
+.slick-slide {
+  padding: 0 12px;
+}
+
 @keyframes scrollLeft {
   0% {
     transform: translateX(0%);
@@ -187,6 +181,11 @@ a {
 }
 
 @media (max-width: 767px) {
+
+  .hero{
+    background-position: -360px;
+    background-repeat: no-repeat;
+  }
 
   .hero-content{
     padding-left: 36px !important;
@@ -205,8 +204,22 @@ a {
     width: 360px !important;
   }
 
-  .card-benefit{
+  .scorecard{
+    padding-bottom: 0px !important;
+  }
+
+  .feature{
+    margin-bottom: 50px !important;
+  }
+
+  .card-benefit,
+  .card-benefit-2,
+  .card-benefit-3{
     background-position: right !important;
+  }
+
+  .card-benefit-2{
+    height: 415px !important;
   }
 
   .card-speaker{
@@ -221,18 +234,22 @@ a {
     font-size: 16px !important;
   }
 
-  /* .cta-section{
-    min-height: 200px;
+  .cta-section{
     background-position: center;
-  } */
+  }
 
   .card-price{
     height: 280px !important;
   }
 
-  .title-price{
+  .individu-price,
+  .group-price{
     border-right: none !important;
     border-bottom: solid 1px #dee2e6;
+  }
+
+  .individu-price{
+    width: 100%;
   }
 
   .tag-price{
@@ -241,32 +258,45 @@ a {
     left: 4px !important;
   }
 
-  /* .bg-momen{
-    background-position: center;
-  } */
+  /* Accordion Gallery */
 
   .accordion-gallery {
+    display: flex;
     flex-direction: column;
-    height: auto;
+    gap: 24px;
+    padding: 0 24px;
   }
 
   .accordion-image {
-    flex: unset;
-    height: 200px;
+    width: 100%;
+    border-radius: 16px;
+    cursor: pointer;
   }
 
   .accordion-image.active {
-    height: 350px;
+    width: 100%;
+    height: 2100px !important;
+    border-radius: 16px;
   }
 
-    .carousel-item {
+  .accordion-overlay {
+    padding: 20px 12px;
+  }
+
+  .CTA{
+    margin-top: 50px !important;
+  }
+
+  /* Partner */
+
+  .carousel-item {
     margin-left: 1rem;
     margin-right: 1rem;
   }
 
   .contact-cta{
-    padding-left: 8px !important;
-    padding-right: 8px !important;
+    padding-left: 24px !important;
+    padding-right: 24px !important;
   }
 
   .row-footer{
@@ -285,6 +315,20 @@ a {
   .masonry-container {
     column-count: 1;
   }
+
+  .contact{
+    background-position: center;
+    border-radius: 0 !important;
+  }
+
+  #Testimoni{
+    margin-bottom: 50px !important;
+  }
+
+  .container-momen{
+    margin-top: 50px !important;
+  }
+ 
 }
 
 
