--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,16 +1,32 @@
-/* :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-} */
-
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
+ /* Font Size */
+ .fs-xs {font-size: 10px;}
+ .fs-sm {font-size: 12px;}
+ .fs-md {font-size: 14px;}
+ .fs-lg {font-size: 16px;}
+ .fs-xl {font-size: 20px;}
+ 
+ /* Font Weight */
+ .fw-100 {font-weight: 100;}
+ .fw-300 {font-weight: 300;}
+ .fw-400 {font-weight: 400;}
+ .fw-500 {font-weight: 500;}
+ .fw-700 {font-weight: 700;}
+ .fw-900 {font-weight: 900;}
+
+/* Text Color */
+.text-main {color: #FFB929;}
+.text-blue {color: #4DA2FF;}
+.text-pink {color: #FF4DA2;}
+.text-grey {color: #888;}
+
+ /* Radius */
+.radius-4 {border-radius: 4px;}
+.radius-6 {border-radius: 6px;}
+.radius-8 {border-radius: 8px;}
+.radius-10 {border-radius: 10px;}
+.radius-12 {border-radius: 12px;}
 
 html,
 body {
@@ -18,9 +34,7 @@ body {
   overflow-x: hidden;
 }
 
-body {
-  /* color: var(--foreground);
-  background: var(--background); */
+/* body {
   font-family: "Outfit", sans-serif;
   font-weight: 400;
   font-size: 16px;
@@ -28,6 +42,16 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   padding-top: 80px !important;
+} */
+
+body {
+  background: var(--background);
+  font-family: 'Outfit', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #fff;
+  padding-top: 80px !important;
+  color: #0A0A0A;
 }
 
 * {
@@ -49,8 +73,47 @@ a {
   font-family: 'Outfit', sans-serif !important;
 }
 
-/* @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-} */
+/* NAVBAR */
+.glass-navbar {
+  background: rgba(255, 255, 255, 0.7) !important;
+  backdrop-filter: blur(3px);
+  transition: background 0.3s ease, backdrop-filter 0.3s ease;
+}
+
+.nav-link.active{
+  font-family: 'Fredoka', sans-serif;
+  font-weight: 600;
+}
+
+.nav-link{
+  font-family: 'Fredoka', sans-serif;
+  font-weight: 400;
+  color: #777777;
+}
+
+.btn-warning{
+  padding: 12px 24px;
+  width: 150px;
+}
+
+.btn-hero,
+.btn-cta{
+  padding: 12px 24px !important;
+}
+
+.curved-underline {
+  position: relative;
+  display: inline-block;
+}
+
+.curved-underline::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: -36px;
+  transform: translateX(-50%);
+  width: 100%;
+  height: 40px;
+  border-radius: 50%; /* ujung bulat maksimal */
+  border-top: 4px solid currentColor;
+}
