--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,7 @@
  .fw-300 {font-weight: 300;}
  .fw-400 {font-weight: 400;}
  .fw-500 {font-weight: 500;}
+  .fw-600 {font-weight: 600;}
  .fw-700 {font-weight: 700;}
  .fw-900 {font-weight: 900;}
 
@@ -27,6 +28,7 @@
 .radius-8 {border-radius: 8px;}
 .radius-10 {border-radius: 10px;}
 .radius-12 {border-radius: 12px;}
+.radius-16 {border-radius: 16px;}
 
 html,
 body {
@@ -101,6 +103,19 @@ a {
   padding: 12px 24px !important;
 }
 
+.btn-navbar {
+  width: fit-content;
+  transition: all 0.3s ease;
+}
+
+.btn-navbar:hover {
+  background-color: #ffb929 !important;
+  color: black !important;
+  border-color: #ffb929 !important;
+  transform: translateY(-2px);
+  box-shadow: 0 4px 12px rgba(255, 185, 41, 0.3);
+}
+
 .curved-underline {
   position: relative;
   display: inline-block;
@@ -116,4 +131,43 @@ a {
   height: 40px;
   border-radius: 50%; /* ujung bulat maksimal */
   border-top: 4px solid currentColor;
+}
+
+.whatsapp-fab {
+  /* position: fixed; */
+  bottom: 100px;
+  right: 30px;
+  z-index: 99;
+}
+
+.fab-icon {
+  height: 72px;
+  cursor: pointer;
+  transition: transform 0.2s ease;
+}
+
+.fab-icon:hover {
+  transform: scale(1.1);
+}
+.fab-label {
+  background: #fff;
+  color: #333;
+  padding: 10px 16px;
+  border-radius: 8px;
+  border: solid 1px #E4E4E4;
+  line-height: 150%;
+  /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15); */
+}
+
+.fab-label::before {
+  content: "";
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  right: 27px;
+  bottom: 80px;
+  background-color: #fff;
+  transform: rotate(45deg);
+  border-right: solid 1px #E4E4E4;
+  border-bottom: solid 1px #E4E4E4;
 }
