--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
  .fs-md {font-size: 14px;}
  .fs-lg {font-size: 16px;}
  .fs-xl {font-size: 20px;}
+ .fs-2xl {font-size: 24px;}
  
  /* Font Weight */
  .fw-100 {font-weight: 100;}
@@ -52,7 +53,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fff;
-  padding-top: 80px !important;
   color: #0A0A0A;
 }
 
